  EntityUiUtil.createCheckBox() changed according to the above
  EntityPropertyLinkTest.testDatePropertyLink() improved
  EntityTableModel.filteredEntities renamed to hiddenEntities
  Configuration.DEFAULT_COMBO_BOX_NULL_VALUE_ITEM added
  FilteredComboBoxModel.nullValueItem type changed from Object to String
  EntityModel, EntityUiUtil, EntityBindingPanel and PropertyComboBoxModel changed according to the above
  FilteredComboBoxModel.nullValueItem unfinalized, setter added
  EntityPropertyEditor.InputManager.getInputManager() now throws UserException, useful when refreshing combo box models
  EntityModel.getPropertyComboBoxModel(), moved code into PropertyComboBoxModel constructor
  EntityEditModel refactored from EntityModel
  Entity.getPropertyChangeEvent() removed
  Entity.setFirePropertyChangeEvent() removed
  Entity.add/removePropertyListener() added
  State.evtSetActive/evtSetInactive removed
  State.LinkeState and getLinkedState() added
  EntityEditModel.getPropertyChangeEvent() and getPropertyValueSetEvent() refactored
  Entity.getModifiedState() now returns a linked state
  State.name field removed along with a couple constructors
  EntityEditPanel refactored out of EntityPanel
  ResultPacker is no longer serializable
  EntityPanel.editPanel field renamed to editControlPanel
  EntityPanel.editPanel field added (EntityEditPanel)
  EntityBindingPanel deleted, functionality merged into EntityEditPanel
  framework.client.ui refactoring, removed dependency cycles
  framework.client.ui.reporting.EntityReportUiUtil added
  EntityUiUtil.createEntityComboBoxPanel() and createEntityLookupFieldPanel() added
  SearchTypes renamed
  EntityDb.selectForUpdate() removed, replaced with optimistic locking
  EntityDbProvider.logout() renamed to disconnect
  EntityDb.logout() renamed to disconnect
  DbConnection.getConnectionUser() renamed to getUser()
  EntityDbRemoteServer and EntityDbRemoteServerAdmin refactored, removing cyclical dependency